# tascli

./: Cargo.toml  MIGRATION.md  NLP_EXAMPLES.md  README.md  TODO.md  TROUBLESHOOTING.md
bench/: README.md  RESULTS.md  nlp_comparison.sh  run_manual.sh  startup.sh
src/: main.rs
src/actions/: handler.rs  mod.rs  nlp.rs
src/actions/display/: mod.rs  print.rs
src/args/: parser.rs
src/config/: mod.rs
src/nlp/: batching.rs  cache.rs  client.rs  conditional.rs  context.rs  error_recovery.rs  help.rs  integration_tests.rs  interactive.rs  learning.rs  mapper.rs  mapper_tests.rs  mod.rs  natural_language_patterns_tests.rs  parser.rs  pattern_matcher.rs  personalization.rs  preview.rs  sequential.rs  suggestions.rs  transparency.rs  types.rs  validator.rs
