[package]
name = "tascli"
version = "0.10.1"
edition = "2024"
description = "A simple CLI tool for tracking tasks and records from terminal"
license = "MIT"
repository = "https://github.com/Aperocky/tascli"

[[bin]]
name = "tascli"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
rusqlite = { version = "0.37", features = ["bundled"] }
chrono = "0.4"
terminal_size = "0.4"
unicode-width = "0.2.0"
nanoserde = "0.2.1"
home = "0.5.11"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "1.0"
regex = "1.11"

[dev-dependencies]
tempfile = "3.19.0"

[profile.release]
opt-level = "z"
lto = true
strip = true
